[#27] fix: positions correction so that the planets do not overlap

--- a/pages/map.css
+++ b/pages/map.css
@@ -135,7 +135,7 @@
 
     .planet {
         align-items: flex-end;
-        bottom: 45%;
+        bottom: 48%;
         right: -3.3%;
         padding-right: 2rem;
 
